Pinned fasthtml version in settings.ini

--- a/settings.ini
+++ b/settings.ini
@@ -8,6 +8,7 @@ lib_name = %(repo)s
 version = 0.0.1
 min_python = 3.10
 license = apache2
+requirements = python-fasthtml>=0.12.19 monsterui>=1.0.20
 black_formatting = False
 
 ### nbdev ###
@@ -39,7 +40,6 @@ status = 3
 user = LotsOfOrg
 
 ### Optional ###
-requirements = python-fasthtml monsterui>=1.0.20
 # dev_requirements = 
 # console_scripts =
 # conda_user = 
